# hermes-memory-core

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  test_full_system_orchestration.py  test_full_system_orchestration_v2.py  test_orchestration_grand_symphony.py  verify_intelligence.py  verify_intelligence_v2.py  verify_intelligence_v3.py
application/: autonomous_orchestrator.py  engine.py  evolution_orchestrator.py  graph_manager.py  orchestrator.py  refinement_orchestrator.py
core/: agent.py  agents_impl.py  analyzer.py  config_loader.py  engine.py  insight_trigger.py  ledger.py  llm_implementations.py  models.py  monitor.py  monitor_models.py  orchestrator.py  refinement_orchestrator.py  semantic_memory.py  synthesis.py  synthesizer.py
docs/: PHASE_4_AGENCY_DESIGN.md  PHASE_4_DESIGN.md  PHASE_4_INSIGHT_SYNTHESIS.md
infrastructure/: llm_implementations.py  llm_interface.py  logging_config.py  paths.py  youtube_content.py
scripts/: episodic_migration.py  execute_first_contact.py  stress_test_proactive_loop.py  test_llm_connectivity.py
src/: hermes_memory_tools.py  mcp_server.py
tests/: test_acl_missing_paths.py  test_acl_translators.py  test_agent_lifecycle.py  test_agents_impl_paths.py  test_anomaly_detector.py  test_auditor_drift.py  test_autonomous_orchestrator.py  test_config_loader.py  test_continuity_loop.py  test_dual_layer_scan.py  test_engine_resolvers.py  test_evolution.py  test_evolution_gate.py  test_evolution_ingestion.py  test_full_system_orchestration_v2.py  test_graph_integration.py  test_mcp_server.py  (+29 more)
(+33 files in other folders)
